<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealListActivity"
    android:background="@color/white_darker">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolBar.textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meal_list"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <HorizontalScrollView
        android:id="@+id/meal_horizontal_list"
        android:background="@color/white_darker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/beef_type"
                style="@style/meal_horizontal_list_item.active">

                <ImageView
                    style="@style/meal_horizontal_list_item_image"
                    android:src="@drawable/beef"
                    android:contentDescription="@string/beef_image" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dessert_type"
                style="@style/meal_horizontal_list_item">

                <ImageView
                    style="@style/meal_horizontal_list_item_image"
                    android:src="@drawable/dessert"
                    android:contentDescription="@string/dessert_image" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pasta_type"
                style="@style/meal_horizontal_list_item">

                <ImageView
                    style="@style/meal_horizontal_list_item_image"
                    android:src="@drawable/pasta"
                    android:contentDescription="@string/pasta_image" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/miscellaneous_type"
                style="@style/meal_horizontal_list_item">

                <ImageView
                    style="@style/meal_horizontal_list_item_image"
                    android:src="@drawable/miscellaneous"
                    android:contentDescription="@string/miscellaneous_image" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/lamb_type"
                style="@style/meal_horizontal_list_item">

                <ImageView
                    style="@style/meal_horizontal_list_item_image"
                    android:src="@drawable/lamb"
                    android:contentDescription="@string/lamb_image" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/chicken_type"
                style="@style/meal_horizontal_list_item">

                <ImageView
                    style="@style/meal_horizontal_list_item_image"
                    android:src="@drawable/chicken"
                    android:contentDescription="@string/chiken_image" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/meal_horizontal_list">

        <LinearLayout
            style="@style/meal_vertical_list_item"
            android:id="@+id/meal_item">

            <ImageView
                style="@style/meal_vertical_list_item_image"
                android:src="@drawable/meal_preview" />
            <TextView
                style="@style/meal_vertical_list_item_text"
                android:text="@string/meal_text" />
        </LinearLayout>

        <LinearLayout
            style="@style/meal_vertical_list_item"
            android:id="@+id/steak_item">

            <ImageView
                style="@style/meal_vertical_list_item_image"
                android:src="@drawable/steak_preview" />
            <TextView
                style="@style/meal_vertical_list_item_text"
                android:text="@string/steak_text" />
        </LinearLayout>

        <LinearLayout
            style="@style/meal_vertical_list_item">

            <ImageView
                style="@style/meal_vertical_list_item_image"
                android:src="@drawable/meal_preview" />
            <TextView
                style="@style/meal_vertical_list_item_text"
                android:text="@string/meal_text" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>