<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filterBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <Button
            android:id="@+id/closeButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start"
            android:foreground="@drawable/ic_close_icon"
            android:gravity="center|center_vertical"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/alphabetSortTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="21dp"
        android:text="@string/sort_by_alphabet"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/myToolbar" />

    <LinearLayout
        android:id="@+id/sortButtonsRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/alphabetSortTextView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ascButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:text="@string/sort_by_ascending"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:backgroundTint="@color/blue_light"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/descButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:text="@string/sort_by_descending"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:backgroundTint="@color/blue_light"
            app:cornerRadius="8dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:text="@string/apply"
        android:textColor="@color/white"
        app:backgroundTint="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>