<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:layout_gravity="top"
                android:src="@drawable/chicken_details"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="33dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/cuisine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textSize="13sp"
                    android:textColor="@color/gray"
                    android:text="@string/japaneese"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/teriyaki_chicken_casserole"/>

                <HorizontalScrollView
                    android:layout_marginTop="8dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="95dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:gravity="center|center_vertical"
                            android:background="@color/blue_light"
                            android:text="@string/meat"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="95dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:gravity="center|center_vertical"
                            android:background="@color/blue_light"
                            android:text="@string/casserole"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </HorizontalScrollView>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="13dp"
                    android:background="@color/blue_light"
                    android:layout_marginTop="24dp">

                    <TextView
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="@color/gray"
                        android:text="@string/ingridients"/>

                    <TextView
                        android:id="@+id/ingridients"
                        android:layout_margin="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:text="@string/chicken_recipe"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/chicken_preview_video"
                android:scaleType="centerCrop"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>