<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/toolbarCloseButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:foreground="@drawable/ic_close_icon"
            android:gravity="center|center_vertical"
            android:layout_gravity="start"
            style="?android:attr/buttonBarButtonStyle"
            tools:targetApi="m"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/filter"
            android:textSize="18sp"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_alphabet"
            android:textColor="@color/black"
            android:padding="21dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="21dp" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/asc_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:cornerRadius="8dp"
                android:textColor="@color/black"
                app:backgroundTint="@color/blue_light"
                android:text="@string/sort_by_ascending" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/desc_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:cornerRadius="8dp"
                android:textColor="@color/black"
                app:backgroundTint="@color/blue_light"
                android:text="@string/sort_by_descending" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:text="@string/apply"
        app:backgroundTint="@color/pink"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>